syntax = "proto3";
option go_package = ".";


service CRUD{
  rpc CreateAccount(CreateAccountRequest)returns(CreateAccountResponse){};
  rpc DeleteAccount(DeleteAccountRequest)returns(DeleteAccountResponse);
  rpc LogIn(LogInRequest)returns(LogInResponse){};
  rpc LogOut(LogOutRequest)returns(LogOutResponse);
  rpc UpdateAccount(UpdateAccountRequest)returns(UpdateAccountResponse);

}

message CreateAccountRequest{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message CreateAccountResponse{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message DeleteAccountRequest{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message DeleteAccountResponse{
  string id = 1;
  string userName = 2;
  string password = 3;
}
message LogInRequest{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message LogInResponse{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message LogOutRequest{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message LogOutResponse{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message UpdateAccountRequest{
  string id = 1;
  string userName = 2;
  string password = 3;
}

message UpdateAccountResponse{
  string id = 1;
  string userName = 2;
  string password = 3;
}
